# fits-header

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  STACK.md  apm.lock.yaml  apm.yml  clippy.toml  justfile  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
.project-setup/: answers.toml  sources.toml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: guide.md
examples/: quickstart.rs
specs/001-fits-header-io/: data-model.md  decisions.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fits-header-io/checklists/: requirements.md
specs/001-fits-header-io/contracts/: api.md
specs/tiny/: skymath-0.6.0.md
src/: coords.rs  dates.rs  error.rs  header.rs  key.rs  lib.rs  parse.rs  record.rs  value.rs  write.rs
tests/: crud.rs  helpers.rs  integration_fits.rs  read.rs  roundtrip.rs  serde.rs  update_file.rs  values.rs  write.rs  write_to_file.rs
tests/common/: mod.rs
