[package]
name = "fits-header"
version = "0.4.1"
edition = "2021"
rust-version = "1.74"
license = "MPL-2.0"
description = "Pure-Rust, MSVC-safe FITS header reader/writer: parse every card from a FITS file, CRUD single or multiple header keywords, then serialize back to a valid FITS object."
repository = "https://github.com/nightwatch-astro/fits-header"
documentation = "https://docs.rs/fits-header"
readme = "README.md"
keywords = ["fits", "astronomy", "header", "parser", "metadata"]
categories = ["parser-implementations", "science", "encoding"]
# The published package carries the crate itself plus docs/guide.md, which lib.rs
# renders via include_str! — omitting it would break the published sdist's build.
include = ["src/**", "docs/**", "Cargo.toml", "README.md", "LICENSE"]

[features]
# Off by default. Derives Serialize/Deserialize on the public types so a header can
# be (de)serialized to JSON/etc. Zero cost for consumers who don't opt in.
serde = ["dep:serde", "time/serde"]

[dependencies]
# Pure-Rust, MSVC-safe deps only (no C/system libraries).
time = { version = "0.3", features = ["parsing", "formatting"] }
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
skymath = "0.6.0"

[dev-dependencies]
# Property-based round-trip testing of the parse/to_bytes contract.
proptest = "1"
serde_json = "1.0.150"
# Naming the datetime type in tests (the public API returns time::PrimitiveDateTime).
time = "0.3"

[package.metadata.docs.rs]
# docs.rs documents the serde items too.
all-features = true

[lib]
path = "src/lib.rs"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
